fixed horizontal overflow when vertical scrollbar appears

--- a/src/components/Navbar/Bar.module.scss
+++ b/src/components/Navbar/Bar.module.scss
@@ -1,5 +1,6 @@
 .bar {
     width: 100vw;
+    max-width: 100%;
     background-color: black;
 
     &__container {
