--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -56,6 +56,7 @@
 
 .container {
     width: 100vw;
+    max-width: 100%;
     background-color: $menu-background;
     box-shadow: $box-shadow;
 
